[fix] no backface visibility

--- a/packages/scss/src/utilities/_animations.scss
+++ b/packages/scss/src/utilities/_animations.scss
@@ -2,7 +2,6 @@
 	animation-duration: _theme("commons.animations.durations.standard");
 	animation-fill-mode: both;
 	animation-timing-function: _theme("commons.animations.function");
-	backface-visibility: hidden;
 }
 
 .u-animatedFadeIn, .u-animatedFadeOut {
